RESOLVED FIXED248994
Blob range request test failures
https://bugs.webkit.org/show_bug.cgi?id=248994
Summary Blob range request test failures
Attachments
Radar WebKit Bug Importer
Comment 1 2022-12-09 00:20:27 PST
Anne van Kesteren
Comment 2 2023-03-20 02:08:52 PDT
I updated the tests to better reflect the whitespace requirements: https://github.com/web-platform-tests/wpt/pull/39078.
Anne van Kesteren
Comment 3 2023-03-21 05:49:05 PDT
I attempted writing a patch for this and found some more issues that also impact the specification. We need to clamp the range start and end values pro-actively, otherwise `Content-Range` cannot be set correctly. Too large start values should result in rejection. It's not useful to return the last byte. The draft patch can be found at https://github.com/WebKit/WebKit/pull/11756. (Apologies for the poor formatting of the commit message. `git webkit pr` was not my friend.) It also fixes bug 243403.
EWS
Comment 4 2023-03-22 09:34:40 PDT
Committed 261968@main (09841b4faec7): <https://commits.webkit.org/261968@main> Reviewed commits have been landed. Closing PR #11756 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.